--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <body>
     <ul>
         <li>Alexandre Wilian Nikitin - v0.1.0</li>
+        <li>Alison Henrique Castagnoli de Oliveira - v0.1.1</li>
     </ul>
 </body>
 </html>
