adicionando Allan Kley

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <ul>
         <li>Alexandre Wilian Nikitin - v0.1.0</li>
         <li>Alison Henrique Castagnoli de Oliveira - v0.1.1</li>
+        <li>Allan de Lara Kley - v0.1.2</li>
     </ul>
 </body>
 </html>
