--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Avaliação - Curso de DevOps do Senai - {Nome do Aluno}</title>
 </head>
+
 <body>
     <ul>
         <li>Alexandre Wilian Nikitin - v0.1.0</li>
         <li>Alison Henrique Castagnoli de Oliveira - v0.1.1</li>
         <li>Allan de Lara Kley - v0.1.2</li>
+        <li>Bruno Viotto Dos Santos - v0.1.3</li>
     </ul>
 </body>
+
 </html>
