--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <li>Alison Henrique Castagnoli de Oliveira - v0.1.1</li>
         <li>Allan de Lara Kley - v0.1.2</li>
         <li>Bruno Viotto Dos Santos - v0.1.3</li>
+        <li>Carlos Eduardo Almeida da Costa - v0.1.4</li>
     </ul>
 </body>
 
