--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <li>Allan de Lara Kley - v0.1.2</li>
         <li>Bruno Viotto Dos Santos - v0.1.3</li>
         <li>Carlos Eduardo Almeida da Costa - v0.1.4</li>
+        <li>Gabriel Pucci Bizio - v0.1.5</li>
     </ul>
 </body>
 
