--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <li>Bruno Viotto Dos Santos - v0.1.3</li>
         <li>Carlos Eduardo Almeida da Costa - v0.1.4</li>
         <li>Gabriel Pucci Bizio - v0.1.5</li>
+        <li>Joao Pedro de Castro Faria - v0.1.6</li>
     </ul>
 </body>
 
