--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <li>Carlos Eduardo Almeida da Costa - v0.1.4</li>
         <li>Gabriel Pucci Bizio - v0.1.5</li>
         <li>Joao Pedro de Castro Faria - v0.1.6</li>
+        <li>Leonardo de Siqueira Konopacki - v0.1.7</li>
     </ul>
 </body>
 
