--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <li>Gabriel Pucci Bizio - v0.1.5</li>
         <li>Joao Pedro de Castro Faria - v0.1.6</li>
         <li>Leonardo de Siqueira Konopacki - v0.1.7</li>
+        <li>Luis Hamilton Balem - v0.1.8</li>
     </ul>
 </body>
 
