--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <li>Joao Pedro de Castro Faria - v0.1.6</li>
         <li>Leonardo de Siqueira Konopacki - v0.1.7</li>
         <li>Luis Hamilton Balem - v0.1.8</li>
+        <li>Marina Braga - v0.1.9</li>
     </ul>
 </body>
 
