--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <li>Leonardo de Siqueira Konopacki - v0.1.7</li>
         <li>Luis Hamilton Balem - v0.1.8</li>
         <li>Marina Braga - v0.1.9</li>
+        <li>Melissa Moll - v0.1.10</li>
     </ul>
 </body>
 
