--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <li>Luis Hamilton Balem - v0.1.8</li>
         <li>Marina Braga - v0.1.9</li>
         <li>Melissa Moll - v0.1.10</li>
+        <li>Murilo Henrique Pereira - v0.1.11</li>
     </ul>
 </body>
 
