--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <li>Marina Braga - v0.1.9</li>
         <li>Melissa Moll - v0.1.10</li>
         <li>Murilo Henrique Pereira - v0.1.11</li>
+        <li>Nathan Ansay Cordeiro - v0.1.12</li>
     </ul>
 </body>
 
