--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <li>Melissa Moll - v0.1.10</li>
         <li>Murilo Henrique Pereira - v0.1.11</li>
         <li>Nathan Ansay Cordeiro - v0.1.12</li>
+        <li>Nicholas Stelmach Vicente - v0.1.13</li>
     </ul>
 </body>
 
