--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <li>Murilo Henrique Pereira - v0.1.11</li>
         <li>Nathan Ansay Cordeiro - v0.1.12</li>
         <li>Nicholas Stelmach Vicente - v0.1.13</li>
+        <li>Raissa Sabino de Gouveia - v0.1.14</li>
     </ul>
 </body>
 
