--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
         <li>Nathan Ansay Cordeiro - v0.1.12</li>
         <li>Nicholas Stelmach Vicente - v0.1.13</li>
         <li>Raissa Sabino de Gouveia - v0.1.14</li>
+        <li>Steicy Mayara dos Santos - v0.1.15</li>
+
     </ul>
 </body>
 
