--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <li>Nicholas Stelmach Vicente - v0.1.13</li>
         <li>Raissa Sabino de Gouveia - v0.1.14</li>
         <li>Steicy Mayara dos Santos - v0.1.15</li>
-
+        <li>Thiago Nogueira Pedron - v0.1.16</li>
     </ul>
 </body>
 
