--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <li>Raissa Sabino de Gouveia - v0.1.14</li>
         <li>Steicy Mayara dos Santos - v0.1.15</li>
         <li>Thiago Nogueira Pedron - v0.1.16</li>
+        <li>Vinicius Bruno Gribel - v0.1.17</li>
     </ul>
 </body>
 
