Criação da tag v0.1.3 - Bruno

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Avaliação - Curso de DevOps do Senai - {Nome do Aluno}</title>
+    <title>Avaliação - Curso de DevOps do Senai - Bruno</title>
 </head>
 
 <body>
