Adicionando nome nos títulos

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Avaliação - Curso de DevOps do Senai - {Nome do Aluno}</title>
+    <title>Avaliação - Curso de DevOps do Senai - Raissa Sabino de Gouveia v0.1.14 </title>
 </head>
 
 <body>
