--- a/Raissa/aluno.html
+++ b/Raissa/aluno.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>{Nome do Aluno} - Curso de DevOps do Senai</title>
+    <title> Raissa Sabino de Gouveia v0.1.14 - Curso de DevOps do Senai</title>
 </head>
 <body>
     <ul>
