--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Avaliação - Curso de DevOps do Senai - {Nome do Aluno}</title>
+    <title>Avaliação - Curso de DevOps do Senai - {Leonardo de Siqueira Konopacki - v0.1.7}</title>
 </head>
 
 <body>
