--- a/leonardo/aluno.html
+++ b/leonardo/aluno.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>{Nome do Aluno} - Curso de DevOps do Senai</title>
+    <title>{Leonardo de Siqueira Konopacki - v0.1.7} - Curso de DevOps do Senai</title>
 </head>
 <body>
     <ul>
