--- a/Melissa/aluno.html
+++ b/Melissa/aluno.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>{Nome do Aluno} - Curso de DevOps do Senai</title>
+    <title>Melissa Moll - v0.1.10 - Curso de DevOps do Senai</title>
 </head>
 <body>
     <ul>
