--- a/Nicholas/aluno.html
+++ b/Nicholas/aluno.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Nicholas Stelmach - Curso de DevOps do Senai</title>
+    <title>Nicholas Stelmach Vicente - Curso de DevOps do Senai</title>
 </head>
 <body>
     <ul>
